added react jsx for inserting username

--- a/client/controlpanel/groupSettings.html
+++ b/client/controlpanel/groupSettings.html
@@ -59,8 +59,8 @@
                 <div class="subform">
                     <strong></strong>
                     <div class="form-group">
-                        <strong><label for="GroupName">Group Name</label> <input class="form-control" id="GroupName" name="name" placeholder="Backyard" type="text"></strong>
-                    </div><strong><button class="btn btn-primary" id="savebutton" onclick="" type="submit"><strong>Save Settings</strong></button></strong>
+                        <strong><label for="GroupName">Enter New Group Name</label><input class="form-control" id="GroupName" name="name" placeholder="Backyard" type="text"></strong>
+                    </div><strong><button class="btn btn-primary" id="savebutton" onclick="" type="submit"><strong>Rename Group</strong></button></strong>
                 </div>
             </form><br>
             <div class="subsection">
