fixes for showing settings for plants

--- a/client/controlpanel/dashboard.html
+++ b/client/controlpanel/dashboard.html
@@ -143,11 +143,14 @@ document.write("<li><a><span class=\"glyphicon glyphicon-user\"></span> " + user
 
                                         <!--Dank Weed-->
                                         <div class="innerguts">
-                                        <ul class="nav innerMenu"><li><button class="sets glyphicon glyphicon-cog pull-right settings_cog" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#"> In front of cramer </a></li>
+                                        <ul class="nav innerMenu">
+                                            <li>
+                                                <button id="cog1" class="sets glyphicon glyphicon-cog pull-right settings_cog" style="border:none;background-color:transparent;padding-top:13px;"></button>
+                                                <a href="#"> In front of cramer </a>
+                                            </li>
 
-                                                <div class="content" style="display: none">
+                                                <div id="settingPlant1" class="content" style="display: none">
                                                     <ul class="group-list">
-                                                        <p>Settings</p>
                                                         <li><a>Rename</a></li>
                                                         <li>Change Group</li>
                                                         <li>Delete Plant</li>
@@ -156,16 +159,19 @@ document.write("<li><a><span class=\"glyphicon glyphicon-user\"></span> " + user
                                         </ul>
 
                                         <!--Mystery Plant-->
-                                        <ul class="nav innerMenu"><li><button id="cog1" type="button" class="sets glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button><a href="#">Library sidewalk</a></li>
+                                        <ul class="nav innerMenu">
+                                            <li>
+                                                <button id="cog2" type="button" onclick="" class="sets glyphicon glyphicon-cog pull-right" style="border:none;background-color:transparent;padding-top:13px;"></button>
+                                                <a href="#">Library sidewalk</a>
+                                            </li>
 
-                                            <div class="content" id="settingContents" style="display: none">
+                                            <div class="content" id="settingPlant2" style="display: none">
                                                     <ul class="group-list">
-                                                        <p>Settings</p>
                                                         <li><a>Rename</a></li>
                                                         <li>Change Group</li>
                                                         <li>Delete Plant</li>
                                                     </ul>
-                                                </div>
+                                            </div>
 
                                         </ul>
                                     </ul>
@@ -187,11 +193,16 @@ document.write("<li><a><span class=\"glyphicon glyphicon-user\"></span> " + user
                                     <button id="savebutton" type="submit" class="btn btn-primary" onclick="addGroup()">Create Group</button>
                                 </form>
                             </div>
-                            <script>
+<script>
 
 $(document).ready(function() {
     $("#cog1").click(function () {
-        $("#settingContents").slideToggle();
+        $("#settingPlant1").slideToggle();
+    });
+});
+$(document).ready(function() {
+    $("#cog2").click(function () {
+        $("#settingPlant2").slideToggle();
     });
 });
 
